k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gtcd
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    traefik.ingress.kubernetes.io/router.entrypoints: web,websecure
    traefik.ingress.kubernetes.io/router.middlewares: default-security-headers@kubernetescrd
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - ${DOMAIN}
      secretName: gtcd-tls
  rules:
    - host: ${DOMAIN}
      http:
        paths:
          - path: /count
            pathType: Prefix
            backend:
              service:
                name: goatcounter
                port:
                  number: 8080
          - path: /
            pathType: Prefix
            backend:
              service:
                name: gtcd
                port:
                  number: 80
